--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                 display: none !important;
             }
 
-            /* Shift + - 🌙 ⛶  to bottom bar and order as C + - B I # 🌙 ⛶ then others */
+            /* Shift + - 🌙 ⛶  to bottom bar and order as C + - B 🌙 ⛶ then others */
             #mobile-bottom-bar {
                 display: flex;
                 justify-content: space-around;
@@ -409,11 +409,11 @@ flex: 0 0 auto; / no stretching, no wrapping */
         <button title="Clear" onclick="clearText()">C</button>
         <button title="Increase Font Size" onclick="increaseFont()">+</button>
         <button title="Decrease Font Size" onclick="decreaseFont()">-</button>
-        <button title="Bold" onclick="formatText('bold')">B</button>
+         <button title="Bold" onclick="formatText('bold')">B</button>
+        <button title="Toggle Dark Mode" onclick="toggleDarkMode()">🌙</button>
+        <button title="Toggle Full Screen" onclick="toggleFullScreen()">⛶</button>
         <button title="Italic" onclick="formatText('italic')">I</button>
         <button title="Heading 1" onclick="formatText('heading1')">#</button>
-         <button title="Toggle Dark Mode" onclick="toggleDarkMode()">🌙</button>
-        <button title="Toggle Full Screen" onclick="toggleFullScreen()">⛶</button>
         <button title="Heading 2" onclick="formatText('heading2')">##</button>
         <button title="Insert Link" onclick="formatText('link')">Link</button>
         <button title="Insert Image" onclick="formatText('image')">Img</button>
