--- a/index.html
+++ b/index.html
@@ -379,8 +379,8 @@ flex: 0 0 auto; / no stretching, no wrapping */
         <button title="Decrease Font Size" onclick="decreaseFont()">-</button>
         <button title="Search and Replace" onclick="searchReplace()">Search/Replace</button>
         <button title="Toggle Focus Mode" onclick="toggleFocusMode()">Focus Mode</button>
-        <button title="Undo" onclick="undo()">Undo</button>
-        <button title="Redo" onclick="redo()">Redo</button>
+        <button title="Undo" onclick="undo()">()">↶</button>
+        <button title="Redo" onclick="redo()">↷</button>
         <button title="Toggle Auto Save" onclick="toggleAutoSave()">A</button>
         <button title="Gemini API Instructions" onclick="showApiInstructions()">i</button>
         <button title="Set Gemini API Key" onclick="setApiKey()">API Key</button>
@@ -401,8 +401,8 @@ flex: 0 0 auto; / no stretching, no wrapping */
             </div>
         <button title="Save" onclick="handleSave()">S</button>
         <button title="Toggle Auto Save" onclick="toggleAutoSave()">🔄</button>
-        <button title="Undo" onclick="undo()">↩️</button>
-        <button title="Redo" onclick="redo()">↪️</button>
+        <button title="Undo" onclick="undo()">()">↶</button>
+        <button title="Redo" onclick="redo()">↷</button>
         </div>
     </div>
     <div id="mobile-bottom-bar">
