--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@ flex: 0 0 auto; / no stretching, no wrapping */
             </div>
         <button title="Save" onclick="handleSave()">S</button>
         <button title="Toggle Auto Save" onclick="toggleAutoSave()">🔄</button>
-        <button title="Undo" onclick="undo()">()">↶</button>
+        <button title="Undo" onclick="undo()">↶</button>
         <button title="Redo" onclick="redo()">↷</button>
         </div>
     </div>
