--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@ flex: 0 0 auto; / no stretching, no wrapping */
         <button title="Decrease Font Size" onclick="decreaseFont()">-</button>
         <button title="Search and Replace" onclick="searchReplace()">Search/Replace</button>
         <button title="Toggle Focus Mode" onclick="toggleFocusMode()">Focus Mode</button>
-        <button title="Undo" onclick="undo()">()">↶</button>
+        <button title="Undo" onclick="undo()">↶</button>
         <button title="Redo" onclick="redo()">↷</button>
         <button title="Toggle Auto Save" onclick="toggleAutoSave()">A</button>
         <button title="Gemini API Instructions" onclick="showApiInstructions()">i</button>
