--- a/index.html
+++ b/index.html
@@ -402,11 +402,10 @@
         <button title="Italic" onclick="formatText('italic')">I</button>
         <button title="Heading 1" onclick="formatText('heading1')">#</button>
         <button title="Heading 2" onclick="formatText('heading2')">##</button>
-        <button title="Insert Link" onclick="formatText('link')">Link</button>
-        <button title="Insert Image" onclick="formatText('image')">Img</button>
+        <button title="Insert Link" onclick="formatText('link')">🔗</button>
+        <button title="Insert Image" onclick="formatText('image')">⬆️</button>
         <button title="Numbered List" onclick="formatText('numberedList')">🔢</button>
-        <button title="Blockquote" onclick="formatText('quote')">></button>
-        <button title="Code" onclick="formatText('code')">Code</button>
+        <button title="Blockquote" onclick="formatText('quote')">💬</button>
         <button title="Insert Table" onclick="formatText('table')">▦</button>
         <button title="Insert Footnote" onclick="formatText('footnote')">📎</button>
     </div>
