--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <!-- Script View (Preview) -->
         <div id="script-view" class="h-full flex-col hidden relative">
              <!-- Scene Navigator Button -->
-            <button id="scene-navigator-btn" class="absolute bottom-24 right-8 bg-indigo-600 text-white w-14 h-14 rounded-full shadow-lg z-20 flex items-center justify-center">
+            <button id="scene-navigator-btn" class="absolute top-4 right-4 bg-indigo-600 text-white w-12 h-12 rounded-lg shadow-lg z-20 flex items-center justify-center">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-list-nested" viewBox="0 0 16 16">
                   <path fill-rule="evenodd" d="M4.5 11.5A.5.5 0 0 1 5 11h10a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5zm-2-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm-2-4A.5.5 0 0 1 1 3h10a.5.5 0 0 1 0 1H1a.5.5 0 0 1-.5-.5z"/>
                 </svg>
@@ -194,9 +194,12 @@
 
     <!-- Scene Navigator Panel -->
     <div id="scene-navigator-panel" class="absolute top-0 right-0 h-full w-80 bg-gray-800 shadow-lg z-40 transform translate-x-full transition-transform duration-300 ease-in-out flex flex-col">
-        <div class="p-4 border-b border-gray-700">
-            <h2 class="text-xl font-bold text-white">Scene Navigator</h2>
-            <p class="text-sm text-gray-400">Drag to reorder scenes</p>
+        <div class="p-4 border-b border-gray-700 flex justify-between items-center">
+            <div>
+                <h2 class="text-xl font-bold text-white">Scene Navigator</h2>
+                <p class="text-sm text-gray-400">Drag to reorder scenes</p>
+            </div>
+            <button id="close-navigator-btn" class="text-gray-400 hover:text-white text-2xl">&times;</button>
         </div>
         <ul id="scene-list" class="flex-grow overflow-y-auto p-2">
             <!-- Scene items will be injected here -->
@@ -289,6 +292,7 @@
         const sceneNoIndicator = document.getElementById('scene-no-indicator');
         const sceneNavigatorBtn = document.getElementById('scene-navigator-btn');
         const sceneNavigatorPanel = document.getElementById('scene-navigator-panel');
+        const closeNavigatorBtn = document.getElementById('close-navigator-btn');
         const sceneList = document.getElementById('scene-list');
 
         // --- Global State ---
@@ -850,6 +854,17 @@ Type screenplay here & click SCRIPT button to format it...`;
             populateSceneNavigator();
             sceneNavigatorPanel.classList.toggle('translate-x-full');
         });
+        
+        closeNavigatorBtn.addEventListener('click', () => {
+            sceneNavigatorPanel.classList.add('translate-x-full');
+        });
+        
+        document.addEventListener('click', (e) => {
+            if (!sceneNavigatorPanel.contains(e.target) && !sceneNavigatorBtn.contains(e.target)) {
+                 sceneNavigatorPanel.classList.add('translate-x-full');
+            }
+        });
+
 
         function populateSceneNavigator() {
             sceneList.innerHTML = '';
@@ -924,8 +939,9 @@ Type screenplay here & click SCRIPT button to format it...`;
             const newOrderIndices = [...sceneList.querySelectorAll('li')].map(li => parseInt(li.dataset.sceneIndex));
             const reorderedBlocks = newOrderIndices.map(index => sceneBlocks[index]);
 
-            fountainInput.value = reorderedBlocks.join('\n');
+            fountainInput.value = reorderedBlocks.join('\n\n'); // Join with double newline for spacing
             history.add(fountainInput.value);
+            renderPreview(); // Update preview after reordering
         }
 
         // --- Initialization ---
